k8s/prod/cluster-01-overlay/apply-divorce-ingress.yaml
apiVersion: networking.k8s.io/v1beta1
kind: Ingress
metadata:
  annotations:
    kubernetes.io/ingress.class: traefik
  name: nfdiv-frontend-divorce-domain
  namespace: nfdiv
spec:
  rules:
  - host: www.apply-divorce.service.gov.uk
    http:
      paths:
      - backend:
          serviceName: nfdiv-frontend-nodejs
          servicePort: 80
        path: /
